# bl531-agent

./: .env.example  README.md  config.yml  pyproject.toml  requirements.txt
services/pipelines/: docker-compose.yml.j2
src/bl531/: BL531API.py  BL531DataAPI.py  README.md  api_test.py  context_classes.py  registry.py  tiled_test.py
src/bl531/capabilities/: count_capability.py  diode_alignment_capability.py  example_capability.py  gisaxs_alignment_capability.py  move_capability.py  retrieve_data_capability.py  scan_capability.py
